--- a/Circustrein/MainWindow.xaml
+++ b/Circustrein/MainWindow.xaml
@@ -20,11 +20,11 @@
                         <Label Content="Middelgroot"   FontSize="18" Height="40" Margin="0,10,0,10" Padding="0,5,0,5"/>
                         <Label Content="Groot"         FontSize="18" Height="40" Margin="0,10,0,10" Padding="0,5,0,5"/>
                     </StackPanel>
-                    <StackPanel Width="70" x:Name="spPlantEaters">
+                    <StackPanel Width="70" x:Name="spPlantEters">
                         <Label Content="Aantal" FontSize="20" HorizontalContentAlignment="Center"/>
-                        <TextBox x:Name="TxtAmount_Small_PlantEater"  Text="0"   BorderBrush="LightBlue" FontSize="18" Height="40" Margin="0,10,0,10" Padding="0,5,0,5"/>
-                        <TextBox x:Name="TxtAmount_Medium_PlantEater" Text="0"   BorderBrush="LightBlue" FontSize="18" Height="40" Margin="0,10,0,10" Padding="0,5,0,5"/>
-                        <TextBox x:Name="TxtAmount_Big_PlantEater"    Text="0"   BorderBrush="LightBlue" FontSize="18" Height="40" Margin="0,10,0,10" Padding="0,5,0,5"/>
+                        <TextBox x:Name="TxtDier_1_1"   Text="0"   BorderBrush="LightBlue" FontSize="18" Height="40" Margin="0,10,0,10" Padding="0,5,0,5"/>
+                        <TextBox x:Name="TxtDier_3_1"   Text="0"   BorderBrush="LightBlue" FontSize="18" Height="40" Margin="0,10,0,10" Padding="0,5,0,5"/>
+                        <TextBox x:Name="TxtDier_5_1"   Text="0"   BorderBrush="LightBlue" FontSize="18" Height="40" Margin="0,10,0,10" Padding="0,5,0,5"/>
                     </StackPanel>
                     <Rectangle Width="30"/>
                     <StackPanel Width="120">
@@ -33,18 +33,18 @@
                         <Label Content="Middelgroot"   FontSize="18" Height="40" Margin="0,10,0,10" Padding="0,5,0,5"/>
                         <Label Content="Groot"         FontSize="18" Height="40" Margin="0,10,0,10" Padding="0,5,0,5"/>
                     </StackPanel>
-                    <StackPanel Width="70" x:Name="spMeatEaters">
+                    <StackPanel Width="70" x:Name="spVleesEters">
                         <Label Content="Aantal" FontSize="20" HorizontalContentAlignment="Center"/>
-                        <TextBox x:Name="TxtAmount_Small_MeatEater"   Text="0"   BorderBrush="LightBlue" FontSize="18" Height="40" Margin="0,10,0,10" Padding="0,5,0,5"/>
-                        <TextBox x:Name="TxtAmount_Medium_MeatEater"  Text="0"   BorderBrush="LightBlue" FontSize="18" Height="40" Margin="0,10,0,10" Padding="0,5,0,5"/>
-                        <TextBox x:Name="TxtAmount_Big_MeatEater"     Text="0"   BorderBrush="LightBlue" FontSize="18" Height="40" Margin="0,10,0,10" Padding="0,5,0,5"/>
+                        <TextBox x:Name="TxtDier_1_2"   Text="0"   BorderBrush="LightBlue" FontSize="18" Height="40" Margin="0,10,0,10" Padding="0,5,0,5"/>
+                        <TextBox x:Name="TxtDier_3_2"  Text="0"   BorderBrush="LightBlue" FontSize="18" Height="40" Margin="0,10,0,10" Padding="0,5,0,5"/>
+                        <TextBox x:Name="TxtDier_5_2"     Text="0"   BorderBrush="LightBlue" FontSize="18" Height="40" Margin="0,10,0,10" Padding="0,5,0,5"/>
                     </StackPanel>
                 </DockPanel>
             </StackPanel>
         </Border>
         <DockPanel Margin="0,0,0,180" HorizontalAlignment="Center">
             <Button x:Name="BtnReset" Content="Reset" FontSize="24" Height="50" Width="180" Margin="0,0,10,0" Click="BtnReset_Click"/>
-            <Button x:Name="BtnSeeResult" Content="Geef resultaat" FontSize="24" Height="50" Width="180" Margin="10,0,0,0" Click="BtnSeeResult_Click"/>
+            <Button x:Name="BtnGeefResultaat" Content="Geef resultaat" FontSize="24" Height="50" Width="180" Margin="10,0,0,0" Click="BtnSeeResult_Click"/>
         </DockPanel>
         <Border Background="#FF9100" BorderBrush="Black" BorderThickness="2" CornerRadius="20" Height="460" Width="550" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="30,0,0,20">
             <StackPanel>
