--- a/Circustrein/MainWindow.xaml
+++ b/Circustrein/MainWindow.xaml
@@ -20,11 +20,11 @@
                         <Label Content="Middelgroot"   FontSize="18" Height="40" Margin="0,10,0,10" Padding="0,5,0,5"/>
                         <Label Content="Groot"         FontSize="18" Height="40" Margin="0,10,0,10" Padding="0,5,0,5"/>
                     </StackPanel>
-                    <StackPanel Width="70" x:Name="spPlantEters">
+                    <StackPanel Width="70">
                         <Label Content="Aantal" FontSize="20" HorizontalContentAlignment="Center"/>
-                        <TextBox x:Name="TxtDier_1_1"   Text="0"   BorderBrush="LightBlue" FontSize="18" Height="40" Margin="0,10,0,10" Padding="0,5,0,5"/>
-                        <TextBox x:Name="TxtDier_3_1"   Text="0"   BorderBrush="LightBlue" FontSize="18" Height="40" Margin="0,10,0,10" Padding="0,5,0,5"/>
-                        <TextBox x:Name="TxtDier_5_1"   Text="0"   BorderBrush="LightBlue" FontSize="18" Height="40" Margin="0,10,0,10" Padding="0,5,0,5"/>
+                        <TextBox x:Name="TbxSmallPlantEater"   Text="0"   BorderBrush="LightBlue" FontSize="18" Height="40" Margin="0,10,0,10" Padding="0,5,0,5"/>
+                        <TextBox x:Name="TbxMediumPlantEater"   Text="0"   BorderBrush="LightBlue" FontSize="18" Height="40" Margin="0,10,0,10" Padding="0,5,0,5"/>
+                        <TextBox x:Name="TbxBigPlantEater"   Text="0"   BorderBrush="LightBlue" FontSize="18" Height="40" Margin="0,10,0,10" Padding="0,5,0,5"/>
                     </StackPanel>
                     <Rectangle Width="30"/>
                     <StackPanel Width="120">
@@ -33,11 +33,11 @@
                         <Label Content="Middelgroot"   FontSize="18" Height="40" Margin="0,10,0,10" Padding="0,5,0,5"/>
                         <Label Content="Groot"         FontSize="18" Height="40" Margin="0,10,0,10" Padding="0,5,0,5"/>
                     </StackPanel>
-                    <StackPanel Width="70" x:Name="spVleesEters">
+                    <StackPanel Width="70">
                         <Label Content="Aantal" FontSize="20" HorizontalContentAlignment="Center"/>
-                        <TextBox x:Name="TxtDier_1_2"   Text="0"   BorderBrush="LightBlue" FontSize="18" Height="40" Margin="0,10,0,10" Padding="0,5,0,5"/>
-                        <TextBox x:Name="TxtDier_3_2"  Text="0"   BorderBrush="LightBlue" FontSize="18" Height="40" Margin="0,10,0,10" Padding="0,5,0,5"/>
-                        <TextBox x:Name="TxtDier_5_2"     Text="0"   BorderBrush="LightBlue" FontSize="18" Height="40" Margin="0,10,0,10" Padding="0,5,0,5"/>
+                        <TextBox x:Name="TbxSmallMeatEater"   Text="0"   BorderBrush="LightBlue" FontSize="18" Height="40" Margin="0,10,0,10" Padding="0,5,0,5"/>
+                        <TextBox x:Name="TbxMediumMeatEater"  Text="0"   BorderBrush="LightBlue" FontSize="18" Height="40" Margin="0,10,0,10" Padding="0,5,0,5"/>
+                        <TextBox x:Name="TbxBigMeatEater"     Text="0"   BorderBrush="LightBlue" FontSize="18" Height="40" Margin="0,10,0,10" Padding="0,5,0,5"/>
                     </StackPanel>
                 </DockPanel>
             </StackPanel>
